Fix NPE on prompts displaying colortables for the first time